HelloUltraviolet/Fixtures/RejectedSource/FFI/UnwindCatchABIMismatch/Source/Main.uv
//! Rejected FFI specimen for catch unwind mode without a C-unwind boundary ABI.

extern "C" {
    [[unwind("catch")]]
    public procedure importedValue() -> i32
}

